# mcp-git-summarizer

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: git.rs  main.rs
