[package]
name = "mcp-git-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }

anyhow = "1.0"
dotenv = "0.15"
async-trait = "0.1"
lazy_static = "1.4"




